Fixed production deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,8 @@ RUN mkdir /code
 WORKDIR /code
 
 COPY poetry.lock pyproject.toml /code/
-RUN poetry install --no-dev
+RUN poetry install --without dev --no-root
 
 COPY . .
 
-CMD poetry run ./manage.py wait_for_db && poetry run ./manage.py migrate && poetry run ./manage.py createcachetable && poetry run gunicorn backend.wsgi
+CMD poetry run python ./manage.py wait_for_db && poetry run python ./manage.py migrate && poetry run python ./manage.py createcachetable && poetry run gunicorn backend.wsgi
