--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.6",
     "next": "14.1.0",
     "react": "^18",
@@ -20,6 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "postcss-import": "^16.0.0",
     "tailwindcss": "^3.3.0"
   }
 }
