--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,7 +24,7 @@ djangorestframework-camel-case = "^1.4.2"
 django-anymail = "^10.2"
 zygoat-django = "^1.0.1"
 psycogreen = "^1.0.2"
-django-storages = "^1.14.2"
+django-s3-storage = "^0.15.0"
 
 [tool.poetry.dependencies.gunicorn]
 extras = [ "gevent",]
