--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.6",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
