--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     - db
     volumes:
     - ./backend:/code
+    environment:
+      - DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:3001
   frontend:
     build:
       context: frontend
